test/yacc/err_inherit4.error
YACC: e - line 1 of "./test/err_inherit4.y", syntax error
%locations
^
